Auto-generated JUnit tests (Service-Level Isolation) | 2026-05-19 18:18:41